# Distributed-Fraud-Detection-using-LocalSGD-PyTorch

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analysis/: metrics.py  plots.py  report_generator.py
api/: coordinator_service.py  dc_service.py  main.py  model_manager.py  routes.py  schemas.py  services.py
config/: centralized.yaml  local_sgd_k1.yaml  local_sgd_k10.yaml  local_sgd_k100.yaml  local_sgd_k20.yaml  local_sgd_k5.yaml  local_sgd_k50.yaml  sync_policy.yaml
config/api/: api.yaml
config/network/: custom.yaml  fully_connected.yaml  ring.yaml  star.yaml  tree.yaml
data/: download_data.py  partition_regions.py
experiments/: cleanup.py  experiment_runner.py  run_anomaly_injection.py  run_fault_tolerance.py  run_k_sweep.py
models/: fraud_mlp.py
monitoring/: drift_monitor.py  system_monitor.py
network/: communication.py  fault_injection.py  latency_matrix.py  network_simulator.py  topology.py
training/: centralized_baseline.py  dataset.py  fedavg_baseline.py  local_sgd.py  trainer.py  utils.py
